--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 
     <groupId>com.tumblr</groupId>
     <artifactId>jumblr</artifactId>
-    <version>0.0.12-SNAPSHOT</version>
+    <version>0.0.12.1-VM</version>
 
     <packaging>jar</packaging>
 
     <name>jumblr</name>
-    <description>Official Java wrapper for the Tumblr V2 API</description>
+    <description>Official Java wrapper for the Tumblr V2 API, forked by VidMob</description>
     <url>https://github.com/tumblr/jumblr</url>
 
     <licenses>
